@@ -1,5 +1,7 @@
 2008.06.21 oubiwann
 
+* Updated admin.poges to use the new refresh rate config option.
+* Added a configure option for the refresh rate.
 * Updated the docs with info on the new "refresh" config option.
 * Updated TODO.
 * Cleaned up a listener import.
